--- a/aweekcalendarlib/build.gradle
+++ b/aweekcalendarlib/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.library'
 
+
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
@@ -18,7 +19,13 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        debug {
+            minifyEnabled false
+            testCoverageEnabled true
+
+        }
     }
+
 }
 
 dependencies {
@@ -30,11 +37,13 @@ dependencies {
     compile 'joda-time:joda-time:2.9.7'
 
     //jakewharton library
-    compile 'com.jakewharton:butterknife:8.4.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+    // compile 'com.jakewharton:butterknife:8.4.0'
+    // annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
 
-   // compile 'com.github.aarifi:AweekCalendar:0.1.0'
+//compile 'com.github.aarifi:AweekCalendar:0.1.0'
+
 
     compile 'com.android.support:appcompat-v7:25.2.0'
     testCompile 'junit:junit:4.12'
 }
+
