--- a/build.gradle
+++ b/build.gradle
@@ -23,5 +23,6 @@ task clean(type: Delete) {
 allprojects {
     repositories {
         jcenter()
+        maven { url "https://jitpack.io" }
     }
 }
