--- a/build.gradle
+++ b/build.gradle
@@ -30,3 +30,21 @@ allprojects {
         google()
     }
 }
+
+
+// Define versions in a single place
+ext {
+    /*   // Sdk and tools
+       minSdkVersion = 10
+       targetSdkVersion = 24
+       compileSdkVersion = 24
+       buildToolsVersion = '24.0.2'*/
+
+    // App dependencies
+    firebaseVersion='11.4.2'
+    supportLibraryVersion = '26.1.0'
+    googlePlayServices='11.4.2'
+    guavaVersion = '18.0'
+    junitVersion = '4.12'
+
+}
