--- a/aweekcalendarlib/build.gradle
+++ b/aweekcalendarlib/build.gradle
@@ -4,12 +4,12 @@ group='com.github.aarifi'
 
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    compileSdkVersion 26
+    buildToolsVersion "28.0.3"
 
     defaultConfig {
         minSdkVersion 19
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         vectorDrawables.useSupportLibrary = true
@@ -32,24 +32,24 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    compile 'joda-time:joda-time:2.9.7'
+    implementation 'joda-time:joda-time:2.9.7'
 
     //jakewharton library
     // compile 'com.jakewharton:butterknife:8.4.0'
     // annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
 
 
-    compile "com.android.support:support-vector-drawable:$rootProject.supportLibraryVersion"
+    implementation "com.android.support:support-vector-drawable:$rootProject.supportLibraryVersion"
 
 
-    compile 'com.github.jitpack-io:android-jitpack-library-example:1.5'
+    implementation 'com.github.jitpack-io:android-jitpack-library-example:1.5'
 
-    compile 'com.android.support:appcompat-v7:25.2.0'
-    testCompile 'junit:junit:4.12'
+    implementation 'com.android.support:appcompat-v7:25.2.0'
+    testImplementation 'junit:junit:4.12'
 }
 
